--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angularfire2": "^5.4.2",
     "dotenv": "^8.2.0",
     "firebase": "^7.15.4",
+    "firebase-tools": "^8.4.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
